--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
 <body>
     <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, assumenda.</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem qui id harum ipsam obcaecati itaque, saepe laboriosam odio blanditiis sit debitis quisquam perferendis corrupti minus reprehenderit quibusdam quaerat explicabo? Ut?</p>
+    <ul>
+        <li>Home</li>
+        <li>About US</li>
+        <li>Contact us</li>
+    </ul>
 </body>
 </html>
